Fix cookie notification button on mobile

--- a/content/themes/dude/sass/layout/_site-footer.scss
+++ b/content/themes/dude/sass/layout/_site-footer.scss
@@ -539,7 +539,7 @@ body {
           @media(max-width: 620px) {
             float: right;
             text-align: center;
-            top: -5px;
+            top: 0;
             padding: 5px 25px;
           }
 
